--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -48,7 +48,7 @@ $font-weights: (
   regular: 400,
   medium: 500,
   bold: 700,
-  black: 900
+  "black": 900
 );
 
 // Design tokens imported from JSON (Backgrounds, Chat Status, Chat Entities, Texts)
